--- a/app/src/assets/style/layout.scss
+++ b/app/src/assets/style/layout.scss
@@ -29,6 +29,7 @@ nav.navbar {
 
 #app-container {
   .main-view {
+    padding-bottom: 8px;
     padding-left: 294px;
     transition: padding-left 0.15s;
 
